Changes made to code blocks in the back end: SonarQube analysis